change button colors

--- a/themes/hugo-apero/layouts/partials/cookie-consent.html
+++ b/themes/hugo-apero/layouts/partials/cookie-consent.html
@@ -6,7 +6,7 @@ functionality of this website.</span>
 <br>
 <!--<a id="cookie-notice-accept" class="btn btn-primary btn-sm" style="font-weight: 600; display: inline-flex; cursor: pointer; margin: 0.5rem; padding: 8px; color:rgb(86, 228, 58); background: #f2f2f1;">Approve</a>
 <a id="cookie-notice-deny" class="btn btn-primary btn-sm" style = "font-weight: 600; display: inline-flex; cursor: pointer; margin: 0.5rem; padding: 8px; color:rgb(243, 34, 34); background: #f2f2f1;">Deny</a>-->
-<input id="cookie-notice-accept" type="submit" value="ALLOW" style="background: #274b9f; cursor: pointer; color: white; font-size: .875rem; padding: 10px 10px 8px 10px; margin: 0.5rem; width: 180px; letter-spacing: 1.5px; border-radius: 0; border-color: transparent;" onmouseover="this.style.background='#2c2857';" onmouseout="this.style.background='#274b9f';">
+<input id="cookie-notice-accept" type="submit" value="ALLOW" style="background: rgb(39, 159, 63); cursor: pointer; color: white; font-size: .875rem; padding: 10px 10px 8px 10px; margin: 0.5rem; width: 180px; letter-spacing: 1.5px; border-radius: 0; border-color: transparent;" onmouseover="this.style.background='rgb(22, 102, 38)';" onmouseout="this.style.background='rgb(39, 159, 63)';">
 <input id="cookie-notice-deny" type="submit" value="ESSENTIALS ONLY" style="background: rgb(159, 39, 39); cursor: pointer; color: white; font-size: .875rem; padding: 10px 10px 8px 10px; margin: 0.5rem; width: 180px; letter-spacing: 1.5px; border-radius: 0; border-color: transparent;" onmouseover="this.style.background='rgb(113, 27, 27)';" onmouseout="this.style.background='rgb(159, 39, 39)';">
 <br>
 <a href="/privacy" class="btn btn-primary btn-sm" style = " margin-left: 0.5rem;">More info</a></div>
