some text adjustments

--- a/themes/hugo-apero/layouts/partials/cookie-consent.html
+++ b/themes/hugo-apero/layouts/partials/cookie-consent.html
@@ -1,3 +1,7 @@
+<!--
+source: https://littlebigtech.net/posts/hugo-gdpr-cookie-consent-banner/#process
+-->
+
 <div id="cookie-notice" style = "padding: 0.5rem 1rem; display: none;
 text-align: center; position: fixed; z-index:1; bottom: 0; left: 0px; padding-top: 40px;
 padding-bottom: 30px; width: 100%; background: rgba(210,210,210); color: #404040;">
