--- a/themes/hugo-apero/layouts/partials/head.html
+++ b/themes/hugo-apero/layouts/partials/head.html
@@ -1,8 +1,10 @@
 <head>
   {{ partial "meta.html" . }}
   {{ template "_internal/schema.html" . }}
-  <!--{{ template "_internal/google_analytics.html" . }}-->
-  {{- template "partials/cookie-consent.html" . }}
+  {{ template "_internal/google_analytics.html" . }}
+  <!-- Allows to enable cookie consent banner for Google Analytics -->
+  <!-- just remove spaces between curcly spaces underneath (needed to make it comment) -->
+  <!-- { {- template "partials/cookie-consent.html" . } } -->
   {{ template "_internal/google_analytics_async.html" . }}
   {{ `<!--[if IE]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->` | safeHTML }}
   <link rel="shortcut icon" href="{{ .Site.Params.favicon }}" type="image/x-icon">
