add subscription via mailerlite

--- a/themes/hugo-apero/layouts/_default/single.html
+++ b/themes/hugo-apero/layouts/_default/single.html
@@ -23,6 +23,11 @@
       <footer class="post-footer">
         {{ partial "shared/post-pagination.html" . }}
       </footer>
+      <br/><br/>
+      <div class="ml-form-embed"
+        data-account="3833486:i8n9l6e5b0"
+        data-form="5496008:u3i4h3">
+      </div>
     </article>
     {{ if .Params.show_comments }}
       {{ partial "shared/comments.html" . }}
